--- a/docs/professor/alex_miyamoto_mussi.mdx
+++ b/docs/professor/alex_miyamoto_mussi.mdx
@@ -31,6 +31,19 @@ export const data = {
             "ELM2024"
           ],
           time: "19:00 - 19:50"
+        },
+        {
+          subject: "Física 1",
+          size: 2,
+          teachers: [
+            "Novo professor Física",
+            "Alex Miyamoto Mussi"
+          ],
+          classroom: "Laboratório de Física",
+          students: [
+            "EIN2024"
+          ],
+          time: "07:30 - 08:20"
         }
       ]
     },
