--- a/docs/turma/ein/ein2024.mdx
+++ b/docs/turma/ein/ein2024.mdx
@@ -28,7 +28,7 @@ export const data = {
           size: 2,
           teachers: [
             "Novo professor Física",
-            "Fábio Fernandes da Silva"
+            "Alex Miyamoto Mussi"
           ],
           classroom: "Laboratório de Física",
           students: [
