--- a/docs/professor/fabio_fernandes_da_silva.mdx
+++ b/docs/professor/fabio_fernandes_da_silva.mdx
@@ -6,20 +6,7 @@ export const data = {
   weekClasses: [
     {
       dayName: "Segunda-Feira",
-      dayClasses: [
-        {
-          subject: "Processos de Fabricação I",
-          size: 2,
-          teachers: [
-            "Fábio Fernandes da Silva"
-          ],
-          classroom: "Laboratório de Usinagem B4",
-          students: [
-            "ELM2024"
-          ],
-          time: "21:00 - 21:50"
-        }
-      ]
+      dayClasses: []
     },
     {
       dayName: "Terça-Feira",
@@ -52,6 +39,18 @@ export const data = {
             "EIN2022"
           ],
           time: "10:15 - 11:05"
+        },
+        {
+          subject: "Processos de Fabricação I",
+          size: 2,
+          teachers: [
+            "Fábio Fernandes da Silva"
+          ],
+          classroom: "Laboratório de Usinagem B4",
+          students: [
+            "ELM2024"
+          ],
+          time: "19:00 - 19:50"
         },
         {
           subject: "Tecnologia dos Materiais",
