--- a/docs/professor/sergio_augusto_dias_castro.mdx
+++ b/docs/professor/sergio_augusto_dias_castro.mdx
@@ -8,6 +8,18 @@ export const data = {
       dayName: "Segunda-Feira",
       dayClasses: [
         {
+          subject: "Fundamentos de Matemática",
+          size: 2,
+          teachers: [
+            "Sérgio Augusto Dias Castro"
+          ],
+          classroom: "Sala 13-2",
+          students: [
+            "ELM2024"
+          ],
+          time: "21:00 - 21:50"
+        },
+        {
           subject: "Matemática 2",
           size: 2,
           teachers: [
@@ -39,20 +51,7 @@ export const data = {
     },
     {
       dayName: "Quarta-Feira",
-      dayClasses: [
-        {
-          subject: "Fundamentos de Matemática",
-          size: 2,
-          teachers: [
-            "Sérgio Augusto Dias Castro"
-          ],
-          classroom: "Sala 13-2",
-          students: [
-            "ELM2024"
-          ],
-          time: "19:00 - 19:50"
-        }
-      ]
+      dayClasses: []
     },
     {
       dayName: "Quinta-Feira",
