--- a/docs/professor/samuel_stephan_milczuk.mdx
+++ b/docs/professor/samuel_stephan_milczuk.mdx
@@ -36,6 +36,19 @@ export const data = {
             "IIW2024A"
           ],
           time: "09:25 - 10:15"
+        },
+        {
+          subject: "Informática Básica",
+          size: 2,
+          teachers: [
+            "Samuel Stephan Milczuk",
+            "Novo professor Informática"
+          ],
+          classroom: "Sala 16-2",
+          students: [
+            "TAL2024"
+          ],
+          time: "21:00 - 21:50"
         }
       ]
     },
@@ -101,6 +114,19 @@ export const data = {
             "IIW2024A"
           ],
           time: "07:30 - 08:20"
+        },
+        {
+          subject: "Informática Básica",
+          size: 1,
+          teachers: [
+            "Samuel Stephan Milczuk",
+            "Novo professor Informática"
+          ],
+          classroom: "Sala 16-2",
+          students: [
+            "TAL2024"
+          ],
+          time: "19:00 - 19:50"
         },
         {
           subject: "Informática instrumental e aplicada",
