--- a/docs/sala/bloco_2/sala_16-2.mdx
+++ b/docs/sala/bloco_2/sala_16-2.mdx
@@ -139,7 +139,7 @@ export const data = {
           subject: "Informática Básica",
           size: 2,
           teachers: [
-            "Vagner Simões Santos",
+            "Samuel Stephan Milczuk",
             "Novo professor Informática"
           ],
           classroom: "Sala 16-2",
@@ -289,7 +289,7 @@ export const data = {
           subject: "Informática Básica",
           size: 1,
           teachers: [
-            "Vagner Simões Santos",
+            "Samuel Stephan Milczuk",
             "Novo professor Informática"
           ],
           classroom: "Sala 16-2",
