--- a/docs/professor/novo_professor_informatica.mdx
+++ b/docs/professor/novo_professor_informatica.mdx
@@ -42,7 +42,7 @@ export const data = {
           subject: "Informática Básica",
           size: 2,
           teachers: [
-            "Vagner Simões Santos",
+            "Samuel Stephan Milczuk",
             "Novo professor Informática"
           ],
           classroom: "Sala 16-2",
@@ -105,6 +105,19 @@ export const data = {
           time: "07:30 - 08:20"
         },
         {
+          subject: "Informática Básica",
+          size: 1,
+          teachers: [
+            "Samuel Stephan Milczuk",
+            "Novo professor Informática"
+          ],
+          classroom: "Sala 16-2",
+          students: [
+            "TAL2024"
+          ],
+          time: "19:00 - 19:50"
+        },
+        {
           subject: "Informática instrumental e aplicada",
           size: 2,
           teachers: [
@@ -116,19 +129,6 @@ export const data = {
             "AGO2024 - Grupo A"
           ],
           time: "10:15 - 11:05"
-        },
-        {
-          subject: "Informática Básica",
-          size: 1,
-          teachers: [
-            "Vagner Simões Santos",
-            "Novo professor Informática"
-          ],
-          classroom: "Sala 16-2",
-          students: [
-            "TAL2024"
-          ],
-          time: "19:00 - 19:50"
         }
       ]
     }
