--- a/docs/turma/tal/tal2024.mdx
+++ b/docs/turma/tal/tal2024.mdx
@@ -55,7 +55,7 @@ export const data = {
           subject: "Informática Básica",
           size: 2,
           teachers: [
-            "Vagner Simões Santos",
+            "Samuel Stephan Milczuk",
             "Novo professor Informática"
           ],
           classroom: "Sala 16-2",
@@ -157,7 +157,7 @@ export const data = {
           subject: "Informática Básica",
           size: 1,
           teachers: [
-            "Vagner Simões Santos",
+            "Samuel Stephan Milczuk",
             "Novo professor Informática"
           ],
           classroom: "Sala 16-2",
