--- a/docs/professor/juliano_da_rocha_queiroz.mdx
+++ b/docs/professor/juliano_da_rocha_queiroz.mdx
@@ -10,7 +10,20 @@ export const data = {
     },
     {
       dayName: "Terça-Feira",
-      dayClasses: []
+      dayClasses: [
+        {
+          subject: "Eletrônica",
+          size: 1,
+          teachers: [
+            "Juliano da Rocha Queiroz"
+          ],
+          classroom: "Sala 13-2",
+          students: [
+            "EIN2023"
+          ],
+          time: "09:25 - 10:15"
+        }
+      ]
     },
     {
       dayName: "Quarta-Feira",
@@ -45,14 +58,10 @@ export const data = {
     },
     {
       dayName: "Quinta-Feira",
-      dayClasses: []
-    },
-    {
-      dayName: "Sexta-Feira",
       dayClasses: [
         {
           subject: "Eletrônica",
-          size: 3,
+          size: 2,
           teachers: [
             "Juliano da Rocha Queiroz"
           ],
@@ -60,8 +69,13 @@ export const data = {
           students: [
             "EIN2023"
           ],
-          time: "09:25 - 10:15"
-        },
+          time: "10:15 - 11:05"
+        }
+      ]
+    },
+    {
+      dayName: "Sexta-Feira",
+      dayClasses: [
         {
           subject: "Instrumentos de Medidas Elétricas",
           size: 2,
