--- a/docs/sala/bloco_2/sala_13-2.mdx
+++ b/docs/sala/bloco_2/sala_13-2.mdx
@@ -76,6 +76,18 @@ export const data = {
           time: "07:30 - 08:20"
         },
         {
+          subject: "Eletrônica",
+          size: 1,
+          teachers: [
+            "Juliano da Rocha Queiroz"
+          ],
+          classroom: "Sala 13-2",
+          students: [
+            "EIN2023"
+          ],
+          time: "09:25 - 10:15"
+        },
+        {
           subject: "Lingua Portuguesa 2",
           size: 2,
           teachers: [
@@ -86,18 +98,6 @@ export const data = {
             "EIN2023"
           ],
           time: "10:15 - 11:05"
-        },
-        {
-          subject: "História 2",
-          size: 1,
-          teachers: [
-            "Suzane Conceição Pantolfi Tostes"
-          ],
-          classroom: "Sala 13-2",
-          students: [
-            "EIN2023"
-          ],
-          time: "09:25 - 10:15"
         }
       ]
     },
@@ -134,10 +134,10 @@ export const data = {
           time: "07:30 - 08:20"
         },
         {
-          subject: "Geografia 2",
+          subject: "História 2",
           size: 1,
           teachers: [
-            "Rafael Mendes Moreira"
+            "Suzane Conceição Pantolfi Tostes"
           ],
           classroom: "Sala 13-2",
           students: [
@@ -173,6 +173,18 @@ export const data = {
             "EIN2023"
           ],
           time: "08:20 - 09:10"
+        },
+        {
+          subject: "Geografia 2",
+          size: 1,
+          teachers: [
+            "Rafael Mendes Moreira"
+          ],
+          classroom: "Sala 13-2",
+          students: [
+            "EIN2023"
+          ],
+          time: "09:25 - 10:15"
         }
       ]
     }
