--- a/docs/professor/luiz_inacio_chaves.mdx
+++ b/docs/professor/luiz_inacio_chaves.mdx
@@ -18,20 +18,7 @@ export const data = {
     },
     {
       dayName: "Quinta-Feira",
-      dayClasses: [
-        {
-          subject: "Processos de Fabricação 1",
-          size: 2,
-          teachers: [
-            "Luiz Inácio Chaves"
-          ],
-          classroom: "Laboratório de Usinagem B4",
-          students: [
-            "EIN2023"
-          ],
-          time: "10:15 - 11:05"
-        }
-      ]
+      dayClasses: []
     },
     {
       dayName: "Sexta-Feira",
@@ -83,6 +70,18 @@ export const data = {
             "EIN2021"
           ],
           time: "07:30 - 08:20"
+        },
+        {
+          subject: "Processos de Fabricação 1",
+          size: 2,
+          teachers: [
+            "Luiz Inácio Chaves"
+          ],
+          classroom: "Laboratório de Usinagem B4",
+          students: [
+            "EIN2023"
+          ],
+          time: "10:15 - 11:05"
         }
       ]
     }
