--- a/docs/professor/humberto_fioravante_ferro.mdx
+++ b/docs/professor/humberto_fioravante_ferro.mdx
@@ -35,7 +35,7 @@ export const data = {
           teachers: [
             "Humberto Fioravante Ferro"
           ],
-          classroom: "Sala 100 - Charles Darwin (CR Toledo)",
+          classroom: "Sala 100 - Charles Darwin - CR Toledo",
           students: [
             "FPW2024-1"
           ],
@@ -47,7 +47,7 @@ export const data = {
           teachers: [
             "Humberto Fioravante Ferro"
           ],
-          classroom: "Sala 100 - Charles Darwin (CR Toledo)",
+          classroom: "Sala 100 - Charles Darwin - CR Toledo",
           students: [
             "FPW2024-1"
           ],
@@ -64,7 +64,7 @@ export const data = {
           teachers: [
             "Humberto Fioravante Ferro"
           ],
-          classroom: "Sala 100 - Charles Darwin (CR Toledo)",
+          classroom: "Sala 100 - Charles Darwin - CR Toledo",
           students: [
             "FPW2024-1"
           ],
@@ -76,7 +76,7 @@ export const data = {
           teachers: [
             "Humberto Fioravante Ferro"
           ],
-          classroom: "Sala 100 - Charles Darwin (CR Toledo)",
+          classroom: "Sala 100 - Charles Darwin - CR Toledo",
           students: [
             "FPW2024-1"
           ],
