--- a/docs/sala/bloco_cr_ifpr-biopark/laboratorio_de_informatica_a_-_cr_toledo.mdx
+++ b/docs/sala/bloco_cr_ifpr-biopark/laboratorio_de_informatica_a_-_cr_toledo.mdx
@@ -1,36 +1,25 @@
 ---
-slug: /turma/iiw2023b
+slug: /sala/laboratorio_de_informatica_a_-_cr_toledo
 ---
 import { Grid } from "@site/src/components/Grid";
 import BrowserOnly from "@docusaurus/BrowserOnly";
 export const data = {
-  title: "IIW2023B",
-  base: "IIW",
+  title: "Laboratório de Informatica A - CR Toledo",
+  base: "Bloco CR IFPR-Biopark",
   weekClasses: [
     {
       dayName: "Segunda-Feira",
       dayClasses: [
         {
-          subject: "Matemática II",
+          subject: "Fundamentos de informática",
           size: 2,
           teachers: [
-            "Guilherme de Loreno"
+            "Caroline Domingues Porto do Nascimento Barbieri",
+            "Novo professor Informática"
           ],
-          classroom: "Sala 02 - CR Toledo",
+          classroom: "Laboratório de Informatica A - CR Toledo",
           students: [
-            "IIW2023B"
-          ],
-          time: "15:05 - 15:55"
-        },
-        {
-          subject: "Arte I",
-          size: 2,
-          teachers: [
-            "Josiane Paula Maltauro"
-          ],
-          classroom: "Sala 02 - CR Toledo",
-          students: [
-            "IIW2023B"
+            "IIW2024B"
           ],
           time: "08:20 - 09:10"
         },
@@ -45,18 +34,6 @@ export const data = {
             "IIW2023B"
           ],
           time: "10:15 - 11:05"
-        },
-        {
-          subject: "Geografia I",
-          size: 1,
-          teachers: [
-            "Renato Lada Guerreiro"
-          ],
-          classroom: "Sala 02 - CR Toledo",
-          students: [
-            "IIW2023B"
-          ],
-          time: "07:30 - 08:20"
         },
         {
           subject: "Administração de Sistemas Operacionais e Redes",
@@ -76,42 +53,6 @@ export const data = {
       dayName: "Terça-Feira",
       dayClasses: [
         {
-          subject: "Biologia II",
-          size: 2,
-          teachers: [
-            "Eliana Peliçon Pereira Figueira"
-          ],
-          classroom: "Sala 02 - CR Toledo",
-          students: [
-            "IIW2023B"
-          ],
-          time: "07:30 - 08:20"
-        },
-        {
-          subject: "Matemática II",
-          size: 2,
-          teachers: [
-            "Guilherme de Loreno"
-          ],
-          classroom: "Sala 02 - CR Toledo",
-          students: [
-            "IIW2023B"
-          ],
-          time: "10:15 - 11:05"
-        },
-        {
-          subject: "História II",
-          size: 1,
-          teachers: [
-            "Jael dos Santos"
-          ],
-          classroom: "Sala 02 - CR Toledo",
-          students: [
-            "IIW2023B"
-          ],
-          time: "09:25 - 10:15"
-        },
-        {
           subject: "Administração de Sistemas Operacionais e Redes",
           size: 2,
           teachers: [
@@ -122,18 +63,6 @@ export const data = {
             "IIW2023B"
           ],
           time: "13:10 - 14:00"
-        },
-        {
-          subject: "Língua Portuguesa e Literatura II",
-          size: 2,
-          teachers: [
-            "Talita Bortolini"
-          ],
-          classroom: "Sala 02 - CR Toledo",
-          students: [
-            "IIW2023B"
-          ],
-          time: "15:05 - 15:55"
         }
       ]
     },
@@ -153,28 +82,16 @@ export const data = {
           time: "08:20 - 09:10"
         },
         {
-          subject: "Educação Física II",
+          subject: "Projeto Integrador III",
           size: 2,
           teachers: [
-            "Kleber Augusto Michalichem"
+            "Alexandre Rodrigues Monge"
           ],
-          classroom: "Sala 02 - CR Toledo",
+          classroom: "Laboratório de Informatica A - CR Toledo",
           students: [
-            "IIW2023B"
+            "IIW2022B"
           ],
           time: "10:15 - 11:05"
-        },
-        {
-          subject: "Geografia I",
-          size: 1,
-          teachers: [
-            "Renato Lada Guerreiro"
-          ],
-          classroom: "Sala 02 - CR Toledo",
-          students: [
-            "IIW2023B"
-          ],
-          time: "07:30 - 08:20"
         }
       ]
     },
@@ -194,28 +111,16 @@ export const data = {
           time: "10:15 - 11:05"
         },
         {
-          subject: "Química II",
+          subject: "Projeto integrador I",
           size: 2,
           teachers: [
-            "Antonio Cesar Godoy"
+            "Alexandre Rodrigues Monge"
           ],
-          classroom: "Sala 02 - CR Toledo",
+          classroom: "Laboratório de Informatica A - CR Toledo",
           students: [
-            "IIW2023B"
+            "IIW2024B"
           ],
           time: "07:30 - 08:20"
-        },
-        {
-          subject: "Filosofia II",
-          size: 1,
-          teachers: [
-            "Fabio Antônio da Silva"
-          ],
-          classroom: "Sala 02 - CR Toledo",
-          students: [
-            "IIW2023B"
-          ],
-          time: "09:25 - 10:15"
         }
       ]
     },
@@ -223,40 +128,16 @@ export const data = {
       dayName: "Sexta-Feira",
       dayClasses: [
         {
-          subject: "História II",
-          size: 1,
-          teachers: [
-            "Jael dos Santos"
-          ],
-          classroom: "Sala 02 - CR Toledo",
-          students: [
-            "IIW2023B"
-          ],
-          time: "09:25 - 10:15"
-        },
-        {
-          subject: "Educação Física II",
+          subject: "Linguagens de apresentação e estruturação de conteúdos",
           size: 2,
           teachers: [
-            "Kleber Augusto Michalichem"
+            "Luis Henrique Manosso Von Mecheln"
           ],
-          classroom: "Sala 02 - CR Toledo",
+          classroom: "Laboratório de Informatica A - CR Toledo",
           students: [
-            "IIW2023B"
+            "IIW2024B"
           ],
           time: "10:15 - 11:05"
-        },
-        {
-          subject: "Língua Portuguesa e Literatura II",
-          size: 2,
-          teachers: [
-            "Talita Bortolini"
-          ],
-          classroom: "Sala 02 - CR Toledo",
-          students: [
-            "IIW2023B"
-          ],
-          time: "07:30 - 08:20"
         }
       ]
     }
@@ -321,7 +202,7 @@ export const data = {
   ]
 }
 
-# IIW2023B
+# Laboratório de Informatica A - CR Toledo
 
 <div>
   {
