--- a/docs/sala/bloco_cr_ifpr-biopark/sala_01_-_cr_toledo.mdx
+++ b/docs/sala/bloco_cr_ifpr-biopark/sala_01_-_cr_toledo.mdx
@@ -1,8 +1,11 @@
+---
+slug: /sala/sala_01_-_cr_toledo
+---
 import { Grid } from "@site/src/components/Grid";
 import BrowserOnly from "@docusaurus/BrowserOnly";
 export const data = {
-  title: "Sala 01",
-  base: "",
+  title: "Sala 01 - CR Toledo",
+  base: "Bloco CR IFPR-Biopark",
   weekClasses: [
     {
       dayName: "Segunda-Feira",
@@ -82,7 +85,7 @@ export const data = {
           students: [
             "IIW2024B"
           ],
-          time: "13:10 - 14:00"
+          time: "15:05 - 15:55"
         },
         {
           subject: "Sociologia I",
@@ -118,7 +121,7 @@ export const data = {
           students: [
             "IIW2024B"
           ],
-          time: "14:00 - 14:50"
+          time: "13:10 - 14:00"
         }
       ]
     },
@@ -270,7 +273,7 @@ export const data = {
   ]
 }
 
-# Sala 01
+# Sala 01 - CR Toledo
 
 <div>
   {
