--- a/docs/sala/bloco_cr_ifpr-biopark/sala_02_-_cr_toledo.mdx
+++ b/docs/sala/bloco_cr_ifpr-biopark/sala_02_-_cr_toledo.mdx
@@ -1,8 +1,11 @@
+---
+slug: /sala/sala_02_-_cr_toledo
+---
 import { Grid } from "@site/src/components/Grid";
 import BrowserOnly from "@docusaurus/BrowserOnly";
 export const data = {
-  title: "Sala 02",
-  base: "",
+  title: "Sala 02 - CR Toledo",
+  base: "Bloco CR IFPR-Biopark",
   weekClasses: [
     {
       dayName: "Segunda-Feira",
@@ -70,7 +73,7 @@ export const data = {
           students: [
             "IIW2023B"
           ],
-          time: "15:05 - 15:55"
+          time: "10:15 - 11:05"
         },
         {
           subject: "História II",
@@ -85,16 +88,16 @@ export const data = {
           time: "09:25 - 10:15"
         },
         {
-          subject: "Educação Física II",
+          subject: "Língua Portuguesa e Literatura II",
           size: 2,
           teachers: [
-            "Kleber Augusto Michalichem"
+            "Talita Bortolini"
           ],
           classroom: "Sala 02 - CR Toledo",
           students: [
             "IIW2023B"
           ],
-          time: "10:15 - 11:05"
+          time: "15:05 - 15:55"
         }
       ]
     },
@@ -172,16 +175,16 @@ export const data = {
           time: "09:25 - 10:15"
         },
         {
-          subject: "Língua Portuguesa e Literatura II",
+          subject: "Educação Física II",
           size: 2,
           teachers: [
-            "Talita Bortolini"
+            "Kleber Augusto Michalichem"
           ],
           classroom: "Sala 02 - CR Toledo",
           students: [
             "IIW2023B"
           ],
-          time: "07:30 - 08:20"
+          time: "10:15 - 11:05"
         },
         {
           subject: "Língua Portuguesa e Literatura II",
@@ -193,7 +196,7 @@ export const data = {
           students: [
             "IIW2023B"
           ],
-          time: "10:15 - 11:05"
+          time: "07:30 - 08:20"
         }
       ]
     }
@@ -258,7 +261,7 @@ export const data = {
   ]
 }
 
-# Sala 02
+# Sala 02 - CR Toledo
 
 <div>
   {
