--- a/docs/professor/rafael_luis_bartz.mdx
+++ b/docs/professor/rafael_luis_bartz.mdx
@@ -26,7 +26,7 @@ export const data = {
             "Rafael Luis Bartz",
             "Caroline Domingues Porto do Nascimento Barbieri"
           ],
-          classroom: "Sala 104 - Charles Darwin (CR Toledo)",
+          classroom: "Sala 104 - Charles Darwin - CR Toledo",
           students: [
             "FPI2024-1"
           ],
@@ -39,7 +39,7 @@ export const data = {
             "Rafael Luis Bartz",
             "Caroline Domingues Porto do Nascimento Barbieri"
           ],
-          classroom: "Sala 104 - Charles Darwin (CR Toledo)",
+          classroom: "Sala 104 - Charles Darwin - CR Toledo",
           students: [
             "FPI2024-1"
           ],
@@ -65,7 +65,7 @@ export const data = {
             "Rafael Luis Bartz",
             "Caroline Domingues Porto do Nascimento Barbieri"
           ],
-          classroom: "Sala 104 - Charles Darwin (CR Toledo)",
+          classroom: "Sala 104 - Charles Darwin - CR Toledo",
           students: [
             "FPI2024-1"
           ],
@@ -78,7 +78,7 @@ export const data = {
             "Rafael Luis Bartz",
             "Caroline Domingues Porto do Nascimento Barbieri"
           ],
-          classroom: "Sala 104 - Charles Darwin (CR Toledo)",
+          classroom: "Sala 104 - Charles Darwin - CR Toledo",
           students: [
             "FPI2024-1"
           ],
