--- a/docs/sala/bloco_1/laboratorio_de_informatica_a.mdx
+++ b/docs/sala/bloco_1/laboratorio_de_informatica_a.mdx
@@ -23,19 +23,6 @@ export const data = {
           time: "19:00 - 19:50"
         },
         {
-          subject: "Fundamentos de informática",
-          size: 2,
-          teachers: [
-            "Caroline Domingues Porto do Nascimento Barbieri",
-            "Novo professor Informática"
-          ],
-          classroom: "Laboratório de Informatica A - CR Toledo",
-          students: [
-            "IIW2024B"
-          ],
-          time: "08:20 - 09:10"
-        },
-        {
           subject: "Linguagens de apresentação e estruturação de conteúdos",
           size: 2,
           teachers: [
@@ -46,30 +33,6 @@ export const data = {
             "IIW2024A"
           ],
           time: "10:15 - 11:05"
-        },
-        {
-          subject: "Desenvolvimento WEB Orientado a Objetos",
-          size: 2,
-          teachers: [
-            "Rafael Luis Bartz"
-          ],
-          classroom: "Laboratório de Informatica A - CR Toledo",
-          students: [
-            "IIW2023B"
-          ],
-          time: "10:15 - 11:05"
-        },
-        {
-          subject: "Administração de Sistemas Operacionais e Redes",
-          size: 2,
-          teachers: [
-            "Sergio Ricardo Ferrazoli"
-          ],
-          classroom: "Laboratório de Informatica A - CR Toledo",
-          students: [
-            "IIW2023B"
-          ],
-          time: "13:10 - 14:00"
         }
       ]
     },
@@ -100,49 +63,12 @@ export const data = {
             "IIW2024A"
           ],
           time: "09:25 - 10:15"
-        },
-        {
-          subject: "Administração de Sistemas Operacionais e Redes",
-          size: 2,
-          teachers: [
-            "Sergio Ricardo Ferrazoli"
-          ],
-          classroom: "Laboratório de Informatica A - CR Toledo",
-          students: [
-            "IIW2023B"
-          ],
-          time: "13:10 - 14:00"
         }
       ]
     },
     {
       dayName: "Quarta-Feira",
-      dayClasses: [
-        {
-          subject: "Laboratório de Banco de Dados",
-          size: 2,
-          teachers: [
-            "Alexandre Rodrigues Monge"
-          ],
-          classroom: "Laboratório de Informatica A - CR Toledo",
-          students: [
-            "IIW2023B"
-          ],
-          time: "08:20 - 09:10"
-        },
-        {
-          subject: "Projeto Integrador III",
-          size: 2,
-          teachers: [
-            "Alexandre Rodrigues Monge"
-          ],
-          classroom: "Laboratório de Informatica A - CR Toledo",
-          students: [
-            "IIW2022B"
-          ],
-          time: "10:15 - 11:05"
-        }
-      ]
+      dayClasses: []
     },
     {
       dayName: "Quinta-Feira",
@@ -158,30 +84,6 @@ export const data = {
             "ELE2023"
           ],
           time: "19:00 - 19:50"
-        },
-        {
-          subject: "Projeto Integrador II",
-          size: 2,
-          teachers: [
-            "Alexandre Rodrigues Monge"
-          ],
-          classroom: "Laboratório de Informatica A - CR Toledo",
-          students: [
-            "IIW2023B"
-          ],
-          time: "10:15 - 11:05"
-        },
-        {
-          subject: "Projeto integrador I",
-          size: 2,
-          teachers: [
-            "Alexandre Rodrigues Monge"
-          ],
-          classroom: "Laboratório de Informatica A - CR Toledo",
-          students: [
-            "IIW2024B"
-          ],
-          time: "07:30 - 08:20"
         },
         {
           subject: "Sistemas Gerenciadores de Conteúdo WEB",
@@ -224,18 +126,6 @@ export const data = {
             "IIW2022A"
           ],
           time: "08:20 - 09:10"
-        },
-        {
-          subject: "Linguagens de apresentação e estruturação de conteúdos",
-          size: 2,
-          teachers: [
-            "Luis Henrique Manosso Von Mecheln"
-          ],
-          classroom: "Laboratório de Informatica A - CR Toledo",
-          students: [
-            "IIW2024B"
-          ],
-          time: "10:15 - 11:05"
         },
         {
           subject: "Fundamentos de informática",
