--- a/docs/turma/fpw/fpw2024-1.mdx
+++ b/docs/turma/fpw/fpw2024-1.mdx
@@ -24,7 +24,7 @@ export const data = {
           teachers: [
             "Humberto Fioravante Ferro"
           ],
-          classroom: "Sala 100 - Charles Darwin (CR Toledo)",
+          classroom: "Sala 100 - Charles Darwin - CR Toledo",
           students: [
             "FPW2024-1"
           ],
@@ -36,7 +36,7 @@ export const data = {
           teachers: [
             "Humberto Fioravante Ferro"
           ],
-          classroom: "Sala 100 - Charles Darwin (CR Toledo)",
+          classroom: "Sala 100 - Charles Darwin - CR Toledo",
           students: [
             "FPW2024-1"
           ],
@@ -53,7 +53,7 @@ export const data = {
           teachers: [
             "Humberto Fioravante Ferro"
           ],
-          classroom: "Sala 100 - Charles Darwin (CR Toledo)",
+          classroom: "Sala 100 - Charles Darwin - CR Toledo",
           students: [
             "FPW2024-1"
           ],
@@ -65,7 +65,7 @@ export const data = {
           teachers: [
             "Humberto Fioravante Ferro"
           ],
-          classroom: "Sala 100 - Charles Darwin (CR Toledo)",
+          classroom: "Sala 100 - Charles Darwin - CR Toledo",
           students: [
             "FPW2024-1"
           ],
