--- a/versioned_docs/version-2024.1.2/professor/caroline_domingues_porto_do_nascimento_barbieri.mdx
+++ b/versioned_docs/version-2024.1.2/professor/caroline_domingues_porto_do_nascimento_barbieri.mdx
@@ -27,7 +27,7 @@ export const data = {
             "Rafael Luis Bartz",
             "Caroline Domingues Porto do Nascimento Barbieri"
           ],
-          classroom: "Sala 104 - Charles Darwin (CR Toledo)",
+          classroom: "Sala 104 - Charles Darwin - CR Toledo",
           students: [
             "FPI2024-1"
           ],
@@ -40,7 +40,7 @@ export const data = {
             "Rafael Luis Bartz",
             "Caroline Domingues Porto do Nascimento Barbieri"
           ],
-          classroom: "Sala 104 - Charles Darwin (CR Toledo)",
+          classroom: "Sala 104 - Charles Darwin - CR Toledo",
           students: [
             "FPI2024-1"
           ],
@@ -109,7 +109,7 @@ export const data = {
             "Rafael Luis Bartz",
             "Caroline Domingues Porto do Nascimento Barbieri"
           ],
-          classroom: "Sala 104 - Charles Darwin (CR Toledo)",
+          classroom: "Sala 104 - Charles Darwin - CR Toledo",
           students: [
             "FPI2024-1"
           ],
@@ -122,7 +122,7 @@ export const data = {
             "Rafael Luis Bartz",
             "Caroline Domingues Porto do Nascimento Barbieri"
           ],
-          classroom: "Sala 104 - Charles Darwin (CR Toledo)",
+          classroom: "Sala 104 - Charles Darwin - CR Toledo",
           students: [
             "FPI2024-1"
           ],
