--- a/versioned_docs/version-2024.1.2/sala/bloco_charles_darwin/sala_104_-_charles_darwin_-_cr_toledo.mdx
+++ b/versioned_docs/version-2024.1.2/sala/bloco_charles_darwin/sala_104_-_charles_darwin_-_cr_toledo.mdx
@@ -1,8 +1,11 @@
+---
+slug: /sala/sala_104_-_charles_darwin_-_cr_toledo
+---
 import { Grid } from "@site/src/components/Grid";
 import BrowserOnly from "@docusaurus/BrowserOnly";
 export const data = {
-  title: "Sala 104",
-  base: "",
+  title: "Sala 104 - Charles Darwin - CR Toledo",
+  base: "Bloco Charles Darwin",
   weekClasses: [
     {
       dayName: "Segunda-Feira",
@@ -14,7 +17,7 @@ export const data = {
             "Rafael Luis Bartz",
             "Caroline Domingues Porto do Nascimento Barbieri"
           ],
-          classroom: "Sala 104 - Charles Darwin (CR Toledo)",
+          classroom: "Sala 104 - Charles Darwin - CR Toledo",
           students: [
             "FPI2024-1"
           ],
@@ -27,7 +30,7 @@ export const data = {
             "Rafael Luis Bartz",
             "Caroline Domingues Porto do Nascimento Barbieri"
           ],
-          classroom: "Sala 104 - Charles Darwin (CR Toledo)",
+          classroom: "Sala 104 - Charles Darwin - CR Toledo",
           students: [
             "FPI2024-1"
           ],
@@ -53,7 +56,7 @@ export const data = {
             "Rafael Luis Bartz",
             "Caroline Domingues Porto do Nascimento Barbieri"
           ],
-          classroom: "Sala 104 - Charles Darwin (CR Toledo)",
+          classroom: "Sala 104 - Charles Darwin - CR Toledo",
           students: [
             "FPI2024-1"
           ],
@@ -66,7 +69,7 @@ export const data = {
             "Rafael Luis Bartz",
             "Caroline Domingues Porto do Nascimento Barbieri"
           ],
-          classroom: "Sala 104 - Charles Darwin (CR Toledo)",
+          classroom: "Sala 104 - Charles Darwin - CR Toledo",
           students: [
             "FPI2024-1"
           ],
@@ -139,7 +142,7 @@ export const data = {
   ]
 }
 
-# Sala 104
+# Sala 104 - Charles Darwin - CR Toledo
 
 <div>
   {
