--- a/versioned_docs/version-2024.1.2/sala/bloco_cr_ifpr-biopark/laboratorio_de_informatica_b_-_cr_toledo.mdx
+++ b/versioned_docs/version-2024.1.2/sala/bloco_cr_ifpr-biopark/laboratorio_de_informatica_b_-_cr_toledo.mdx
@@ -1,54 +1,70 @@
+---
+slug: /sala/laboratorio_de_informatica_b_-_cr_toledo
+---
 import { Grid } from "@site/src/components/Grid";
 import BrowserOnly from "@docusaurus/BrowserOnly";
 export const data = {
-  title: "Kleber Augusto Michalichem",
-  base: "",
+  title: "Laboratório de Informatica B - CR Toledo",
+  base: "Bloco CR IFPR-Biopark",
   weekClasses: [
     {
       dayName: "Segunda-Feira",
-      dayClasses: []
+      dayClasses: [
+        {
+          subject: "Lógica de programação",
+          size: 2,
+          teachers: [
+            "Humberto Fioravante Ferro",
+            "Sergio Ricardo Ferrazoli"
+          ],
+          classroom: "Laboratório de Informatica B - CR Toledo",
+          students: [
+            "IIW2024B"
+          ],
+          time: "15:05 - 15:55"
+        },
+        {
+          subject: "Desenvolvimento Responsivo e Otimização de Sites",
+          size: 2,
+          teachers: [
+            "Vagner Simões Santos"
+          ],
+          classroom: "Laboratório de Informatica B - CR Toledo",
+          students: [
+            "IIW2022B"
+          ],
+          time: "10:15 - 11:05"
+        },
+        {
+          subject: "Serviços em nuvem",
+          size: 2,
+          teachers: [
+            "Vagner Simões Santos"
+          ],
+          classroom: "Laboratório de Informatica B - CR Toledo",
+          students: [
+            "IIW2022B"
+          ],
+          time: "07:30 - 08:20"
+        }
+      ]
     },
     {
       dayName: "Terça-Feira",
-      dayClasses: [
-        {
-          subject: "Educação Física I",
-          size: 2,
-          teachers: [
-            "Kleber Augusto Michalichem"
-          ],
-          classroom: "Educação Física / Sala 1 B2",
-          students: [
-            "IIW2024A"
-          ],
-          time: "15:05 - 15:55"
-        }
-      ]
+      dayClasses: []
     },
     {
       dayName: "Quarta-Feira",
       dayClasses: [
         {
-          subject: "Educação Física I",
+          subject: "Linguagens de apresentação e estruturação de conteúdos",
           size: 2,
           teachers: [
-            "Kleber Augusto Michalichem"
+            "Luis Henrique Manosso Von Mecheln"
           ],
-          classroom: "Sala 01 - CR Toledo",
+          classroom: "Laboratório de Informatica B - CR Toledo",
           students: [
             "IIW2024B"
-          ],
-          time: "07:30 - 08:20"
-        },
-        {
-          subject: "Educação Física II",
-          size: 2,
-          teachers: [
-            "Kleber Augusto Michalichem"
-          ],
-          classroom: "Sala 02 - CR Toledo",
-          students: [
-            "IIW2023B"
           ],
           time: "10:15 - 11:05"
         }
@@ -62,28 +78,28 @@ export const data = {
       dayName: "Sexta-Feira",
       dayClasses: [
         {
-          subject: "Educação Física I",
+          subject: "Prototipação de Interfaces e Interação Humano-Computador",
           size: 2,
           teachers: [
-            "Kleber Augusto Michalichem"
+            "Vagner Simões Santos"
           ],
-          classroom: "Sala 01 - CR Toledo",
+          classroom: "Laboratório de Informatica B - CR Toledo",
           students: [
-            "IIW2024B"
-          ],
-          time: "08:20 - 09:10"
-        },
-        {
-          subject: "Educação Física II",
-          size: 2,
-          teachers: [
-            "Kleber Augusto Michalichem"
-          ],
-          classroom: "Sala 02 - CR Toledo",
-          students: [
-            "IIW2023B"
+            "IIW2022B"
           ],
           time: "10:15 - 11:05"
+        },
+        {
+          subject: "Sistemas Gerenciadores de Conteúdo WEB",
+          size: 2,
+          teachers: [
+            "Vagner Simões Santos"
+          ],
+          classroom: "Laboratório de Informatica B - CR Toledo",
+          students: [
+            "IIW2022B"
+          ],
+          time: "07:30 - 08:20"
         }
       ]
     }
@@ -148,7 +164,7 @@ export const data = {
   ]
 }
 
-# Kleber Augusto Michalichem
+# Laboratório de Informatica B - CR Toledo
 
 <div>
   {
