--- a/versioned_docs/version-2024.1.2/sala/bloco_cr_ifpr-biopark/sala_01_-_cr_toledo.mdx
+++ b/versioned_docs/version-2024.1.2/sala/bloco_cr_ifpr-biopark/sala_01_-_cr_toledo.mdx
@@ -1,47 +1,50 @@
+---
+slug: /sala/sala_01_-_cr_toledo
+---
 import { Grid } from "@site/src/components/Grid";
 import BrowserOnly from "@docusaurus/BrowserOnly";
 export const data = {
-  title: "Sala 02",
-  base: "",
+  title: "Sala 01 - CR Toledo",
+  base: "Bloco CR IFPR-Biopark",
   weekClasses: [
     {
       dayName: "Segunda-Feira",
       dayClasses: [
         {
-          subject: "Matemática II",
+          subject: "Filosofia I",
+          size: 1,
+          teachers: [
+            "Fabio Antônio da Silva"
+          ],
+          classroom: "Sala 01 - CR Toledo",
+          students: [
+            "IIW2024B"
+          ],
+          time: "07:30 - 08:20"
+        },
+        {
+          subject: "Matemática I",
           size: 2,
           teachers: [
             "Guilherme de Loreno"
           ],
-          classroom: "Sala 02 - CR Toledo",
+          classroom: "Sala 01 - CR Toledo",
           students: [
-            "IIW2023B"
+            "IIW2024B"
           ],
-          time: "15:05 - 15:55"
+          time: "10:15 - 11:05"
         },
         {
-          subject: "Arte I",
+          subject: "Matemática I",
           size: 2,
           teachers: [
-            "Josiane Paula Maltauro"
+            "Guilherme de Loreno"
           ],
-          classroom: "Sala 02 - CR Toledo",
+          classroom: "Sala 01 - CR Toledo",
           students: [
-            "IIW2023B"
+            "IIW2024B"
           ],
-          time: "08:20 - 09:10"
-        },
-        {
-          subject: "Geografia I",
-          size: 1,
-          teachers: [
-            "Renato Lada Guerreiro"
-          ],
-          classroom: "Sala 02 - CR Toledo",
-          students: [
-            "IIW2023B"
-          ],
-          time: "07:30 - 08:20"
+          time: "13:10 - 14:00"
         }
       ]
     },
@@ -49,52 +52,76 @@ export const data = {
       dayName: "Terça-Feira",
       dayClasses: [
         {
-          subject: "Biologia II",
+          subject: "Química I",
           size: 2,
           teachers: [
-            "Eliana Peliçon Pereira Figueira"
+            "Antonio Cesar Godoy"
           ],
-          classroom: "Sala 02 - CR Toledo",
+          classroom: "Sala 01 - CR Toledo",
           students: [
-            "IIW2023B"
+            "IIW2024B"
           ],
           time: "07:30 - 08:20"
         },
         {
-          subject: "Matemática II",
+          subject: "Biologia I",
           size: 2,
           teachers: [
-            "Guilherme de Loreno"
+            "Eliana Peliçon Pereira Figueira"
           ],
-          classroom: "Sala 02 - CR Toledo",
+          classroom: "Sala 01 - CR Toledo",
           students: [
-            "IIW2023B"
+            "IIW2024B"
           ],
-          time: "15:05 - 15:55"
+          time: "10:15 - 11:05"
         },
         {
-          subject: "História II",
+          subject: "Sociologia I",
           size: 1,
           teachers: [
-            "Jael dos Santos"
+            "Fabio Antônio da Silva"
           ],
-          classroom: "Sala 02 - CR Toledo",
+          classroom: "Sala 01 - CR Toledo",
           students: [
-            "IIW2023B"
+            "IIW2024B"
+          ],
+          time: "13:10 - 14:00"
+        },
+        {
+          subject: "Sociologia I",
+          size: 1,
+          teachers: [
+            "Fabio Antônio da Silva"
+          ],
+          classroom: "Sala 01 - CR Toledo",
+          students: [
+            "IIW2024B"
+          ],
+          time: "15:55 - 16:45"
+        },
+        {
+          subject: "Lingua estrangeira - Inglês",
+          size: 1,
+          teachers: [
+            "Josiane Hammes"
+          ],
+          classroom: "Sala 01 - CR Toledo",
+          students: [
+            "IIW2024B"
           ],
           time: "09:25 - 10:15"
         },
         {
-          subject: "Educação Física II",
+          subject: "Língua Portuguesa e Literatura I",
           size: 2,
           teachers: [
-            "Kleber Augusto Michalichem"
+            "Talita Bortolini"
           ],
-          classroom: "Sala 02 - CR Toledo",
+          classroom: "Sala 01 - CR Toledo",
           students: [
-            "IIW2023B"
+            "IIW2024B"
           ],
-          time: "10:15 - 11:05"
+          time: "14:00 - 14:50"
         }
       ]
     },
@@ -102,26 +129,26 @@ export const data = {
       dayName: "Quarta-Feira",
       dayClasses: [
         {
-          subject: "Educação Física II",
+          subject: "Filosofia I",
+          size: 1,
+          teachers: [
+            "Fabio Antônio da Silva"
+          ],
+          classroom: "Sala 01 - CR Toledo",
+          students: [
+            "IIW2024B"
+          ],
+          time: "09:25 - 10:15"
+        },
+        {
+          subject: "Educação Física I",
           size: 2,
           teachers: [
             "Kleber Augusto Michalichem"
           ],
-          classroom: "Sala 02 - CR Toledo",
+          classroom: "Sala 01 - CR Toledo",
           students: [
-            "IIW2023B"
-          ],
-          time: "10:15 - 11:05"
-        },
-        {
-          subject: "Geografia I",
-          size: 1,
-          teachers: [
-            "Renato Lada Guerreiro"
-          ],
-          classroom: "Sala 02 - CR Toledo",
-          students: [
-            "IIW2023B"
+            "IIW2024B"
           ],
           time: "07:30 - 08:20"
         }
@@ -131,28 +158,28 @@ export const data = {
       dayName: "Quinta-Feira",
       dayClasses: [
         {
-          subject: "Química II",
-          size: 2,
-          teachers: [
-            "Antonio Cesar Godoy"
-          ],
-          classroom: "Sala 02 - CR Toledo",
-          students: [
-            "IIW2023B"
-          ],
-          time: "07:30 - 08:20"
-        },
-        {
-          subject: "Filosofia II",
+          subject: "Lingua estrangeira - Inglês",
           size: 1,
           teachers: [
-            "Fabio Antônio da Silva"
+            "Josiane Hammes"
           ],
-          classroom: "Sala 02 - CR Toledo",
+          classroom: "Sala 01 - CR Toledo",
           students: [
-            "IIW2023B"
+            "IIW2024B"
           ],
           time: "09:25 - 10:15"
+        },
+        {
+          subject: "Língua Portuguesa e Literatura I",
+          size: 2,
+          teachers: [
+            "Talita Bortolini"
+          ],
+          classroom: "Sala 01 - CR Toledo",
+          students: [
+            "IIW2024B"
+          ],
+          time: "10:15 - 11:05"
         }
       ]
     },
@@ -160,40 +187,28 @@ export const data = {
       dayName: "Sexta-Feira",
       dayClasses: [
         {
-          subject: "História II",
+          subject: "História I",
           size: 1,
           teachers: [
             "Jael dos Santos"
           ],
-          classroom: "Sala 02 - CR Toledo",
+          classroom: "Sala 01 - CR Toledo",
           students: [
-            "IIW2023B"
-          ],
-          time: "09:25 - 10:15"
-        },
-        {
-          subject: "Língua Portuguesa e Literatura II",
-          size: 2,
-          teachers: [
-            "Talita Bortolini"
-          ],
-          classroom: "Sala 02 - CR Toledo",
-          students: [
-            "IIW2023B"
+            "IIW2024B"
           ],
           time: "07:30 - 08:20"
         },
         {
-          subject: "Língua Portuguesa e Literatura II",
+          subject: "Educação Física I",
           size: 2,
           teachers: [
-            "Talita Bortolini"
+            "Kleber Augusto Michalichem"
           ],
-          classroom: "Sala 02 - CR Toledo",
+          classroom: "Sala 01 - CR Toledo",
           students: [
-            "IIW2023B"
+            "IIW2024B"
           ],
-          time: "10:15 - 11:05"
+          time: "08:20 - 09:10"
         }
       ]
     }
@@ -258,7 +273,7 @@ export const data = {
   ]
 }
 
-# Sala 02
+# Sala 01 - CR Toledo
 
 <div>
   {
