--- a/versioned_docs/version-2024.1.2/sala/bloco_cr_ifpr-biopark/sala_03_-_cr_toledo.mdx
+++ b/versioned_docs/version-2024.1.2/sala/bloco_cr_ifpr-biopark/sala_03_-_cr_toledo.mdx
@@ -1,8 +1,11 @@
+---
+slug: /sala/sala_03_-_cr_toledo
+---
 import { Grid } from "@site/src/components/Grid";
 import BrowserOnly from "@docusaurus/BrowserOnly";
 export const data = {
-  title: "Sala 03",
-  base: "",
+  title: "Sala 03 - CR Toledo",
+  base: "Bloco CR IFPR-Biopark",
   weekClasses: [
     {
       dayName: "Segunda-Feira",
@@ -246,7 +249,7 @@ export const data = {
   ]
 }
 
-# Sala 03
+# Sala 03 - CR Toledo
 
 <div>
   {
