--- a/versioned_docs/version-2024.1.2/sala/bloco_cr_ifpr-biopark/sala_100_-_charles_darwin_-_cr_toledo.mdx
+++ b/versioned_docs/version-2024.1.2/sala/bloco_cr_ifpr-biopark/sala_100_-_charles_darwin_-_cr_toledo.mdx
@@ -1,8 +1,11 @@
+---
+slug: /sala/sala_100_-_charles_darwin_-_cr_toledo
+---
 import { Grid } from "@site/src/components/Grid";
 import BrowserOnly from "@docusaurus/BrowserOnly";
 export const data = {
-  title: "Sala 100",
-  base: "",
+  title: "Sala 100 - Charles Darwin - CR Toledo",
+  base: "Bloco CR IFPR-Biopark",
   weekClasses: [
     {
       dayName: "Segunda-Feira",
@@ -21,7 +24,7 @@ export const data = {
           teachers: [
             "Humberto Fioravante Ferro"
           ],
-          classroom: "Sala 100 - Charles Darwin (CR Toledo)",
+          classroom: "Sala 100 - Charles Darwin - CR Toledo",
           students: [
             "FPW2024-1"
           ],
@@ -33,7 +36,7 @@ export const data = {
           teachers: [
             "Humberto Fioravante Ferro"
           ],
-          classroom: "Sala 100 - Charles Darwin (CR Toledo)",
+          classroom: "Sala 100 - Charles Darwin - CR Toledo",
           students: [
             "FPW2024-1"
           ],
@@ -50,7 +53,7 @@ export const data = {
           teachers: [
             "Humberto Fioravante Ferro"
           ],
-          classroom: "Sala 100 - Charles Darwin (CR Toledo)",
+          classroom: "Sala 100 - Charles Darwin - CR Toledo",
           students: [
             "FPW2024-1"
           ],
@@ -62,7 +65,7 @@ export const data = {
           teachers: [
             "Humberto Fioravante Ferro"
           ],
-          classroom: "Sala 100 - Charles Darwin (CR Toledo)",
+          classroom: "Sala 100 - Charles Darwin - CR Toledo",
           students: [
             "FPW2024-1"
           ],
@@ -135,7 +138,7 @@ export const data = {
   ]
 }
 
-# Sala 100
+# Sala 100 - Charles Darwin - CR Toledo
 
 <div>
   {
