--- a/versioned_docs/version-2024.1.2/turma/fpi/fpi2024-1.mdx
+++ b/versioned_docs/version-2024.1.2/turma/fpi/fpi2024-1.mdx
@@ -17,7 +17,7 @@ export const data = {
             "Rafael Luis Bartz",
             "Caroline Domingues Porto do Nascimento Barbieri"
           ],
-          classroom: "Sala 104 - Charles Darwin (CR Toledo)",
+          classroom: "Sala 104 - Charles Darwin - CR Toledo",
           students: [
             "FPI2024-1"
           ],
@@ -30,7 +30,7 @@ export const data = {
             "Rafael Luis Bartz",
             "Caroline Domingues Porto do Nascimento Barbieri"
           ],
-          classroom: "Sala 104 - Charles Darwin (CR Toledo)",
+          classroom: "Sala 104 - Charles Darwin - CR Toledo",
           students: [
             "FPI2024-1"
           ],
@@ -56,7 +56,7 @@ export const data = {
             "Rafael Luis Bartz",
             "Caroline Domingues Porto do Nascimento Barbieri"
           ],
-          classroom: "Sala 104 - Charles Darwin (CR Toledo)",
+          classroom: "Sala 104 - Charles Darwin - CR Toledo",
           students: [
             "FPI2024-1"
           ],
@@ -69,7 +69,7 @@ export const data = {
             "Rafael Luis Bartz",
             "Caroline Domingues Porto do Nascimento Barbieri"
           ],
-          classroom: "Sala 104 - Charles Darwin (CR Toledo)",
+          classroom: "Sala 104 - Charles Darwin - CR Toledo",
           students: [
             "FPI2024-1"
           ],
